syntax = "proto3";

package broker.workerBroker;

option go_package = "github.com/metorial/metorial/mcp-engine/gen/mcp-engine/workerBroker;workerBroker";

service McpWorkerBroker {
  rpc ListManagers(broker.workerBroker.ListManagersRequest) returns (broker.workerBroker.ListManagersResponse);
  rpc RegisterWorker(broker.workerBroker.RegisterWorkerRequest) returns (broker.workerBroker.RegisterWorkerResponse);
}

message ListManagersRequest {}

message ListManagersResponse {
  repeated Manager managers = 1;
}

message Manager {
  string id = 1;
  string address = 2;
}

enum WorkerType {
  WORKER_TYPE_RUNNER = 0;
}

message RegisterWorkerRequest {
  string worker_id = 1;
  string address = 2;
  WorkerType worker_type = 3;
}

message RegisterWorkerResponse {}
